# prompt

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  parity.md
.claude/skills/verify/: SKILL.md
.github/workflows/: linux.yml  release.yml  windows.yml
assets/: icon.icns
crates/app/: Cargo.toml
crates/app/src/: about.rs  appkit.rs  attachpicker.rs  badge.rs  boxdraw.rs  bridge.rs  catalog.rs  colors.rs  confwrite.rs  element.rs  exportcmd.rs  fidelity.rs  font.rs  guiwasm.rs  help.rs  ipc.rs  keys.rs  linux.rs  main.rs  mcpbridge.rs  metrics.rs  mouse.rs  newagent.rs  ospicker.rs  palette.rs  pluginhost.rs  pluginmanager.rs  pluginwebview.rs  pointer.rs  quick.rs  redact.rs  relay.rs  relaywatch.rs  reload.rs  rename.rs  root.rs  session.rs  sessionstate.rs  shellinteg.rs  sidecar.rs  (+14 more)
crates/app/src/element/: mod.rs  snapshot.rs
crates/app/src/help/: content.rs  mod.rs  render.rs
crates/app/src/relay/: mod.rs  team.rs
crates/app/src/root/: boot.rs  dialogs.rs  dispatch.rs  layout.rs  mcp.rs  menus.rs  mod.rs  panes.rs  persist.rs  pluginpanel.rs  quickopen.rs  render.rs  sidebar.rs  tabs.rs
crates/app/src/settings/: mod.rs  model.rs  ui.rs
crates/app/src/settings/schema/: ai.rs  appearance.rs  general.rs  lists.rs  mod.rs  terminal.rs
crates/app/src/settings/ui/: ai.rs  controls.rs  lists.rs  mod.rs  rows.rs
crates/app/src/view/: annotate.rs  assist.rs  copymode.rs  hints.rs  keys.rs  mod.rs  mouse.rs  notify.rs  paneopts.rs  search.rs  suggest.rs  timestamps.rs
crates/app/tests/: agenthooks.rs  annotate.rs  catalog.rs  colors.rs  copymode.rs  element.rs  mouse.rs  notify.rs  pluginhost.rs  pointer.rs  redact.rs  relay.rs  schema.rs  search.rs  shellinteg.rs  sidecar.rs  suggest.rs  tabbar.rs  textedit.rs  trigger.rs  update.rs  view.rs  warmhost.rs
crates/assist/: Cargo.toml
crates/assist/src/: context.rs  lib.rs  (+4 more)
crates/cast/: Cargo.toml
crates/config/: Cargo.toml
crates/export/: Cargo.toml
crates/input/: Cargo.toml
crates/libsinclair/: Cargo.toml
crates/libsinclair/examples/: embed.rs
crates/libsinclair/src/: bridge.rs  colors.rs  lib.rs  metrics.rs  pointer.rs  termview.rs
crates/libsinclair/src/element/: draw.rs  mod.rs  snapshot.rs
crates/libsinclair/tests/: colors.rs  element.rs
crates/macros/: Cargo.toml
crates/mcp/: Cargo.toml
crates/notes/: Cargo.toml
crates/plugin/: Cargo.toml
crates/pluginrt/: Cargo.toml
crates/pluginrt/testguest/: Cargo.toml
crates/pluginrt/testguest/src/: lib.rs
crates/pty/: Cargo.toml
crates/relay/: Cargo.toml
crates/terminal/: Cargo.toml
crates/theme/: Cargo.toml
crates/vt/: Cargo.toml
crates/workspace/: Cargo.toml
docs/: agents.html  configuration.html  docs.html  gpui.md  guise.md  index.html  keybindings.html  libsinclair.md  palette.html  parity.md  pauseresume.md  plugins.html  pluginsv2.md  plugintutorial.html  relay.md  release.md  roadmap.md  style.css
packaging/scoop/: prompt.json  sinclair.json
plugins/: README.md
plugins/alert/: plugin.toml
plugins/dashboard/: plugin.toml
plugins/docker/: plugin.toml
plugins/git/: plugin.toml
plugins/notes/: .gitignore  plugin.toml
plugins/promptdesigner/: plugin.toml  plugin.ts  readme.md
plugins/screentools/: Cargo.toml  plugin.toml  plugin.wasm
plugins/sysinfo/: plugin.toml
scripts/: bundle.sh  dmg.sh  icon.sh  icon.swift  linux.sh  shot.sh
(+207 files in other folders)
