[package]
autotests = false
name = "libsinclair"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ui"]
# The gpui rendering layer: TerminalElement, TermView, pointer glue.
# Without it the crate is the headless core (session + emulation + frame
# policy) with no gpui in the dependency tree.
ui = ["dep:gpui", "dep:image", "dep:smallvec", "dep:futures"]

[dependencies]
cast = { path = "../cast" }
input = { path = "../input" }
pty = { path = "../pty" }
terminal = { path = "../terminal" }
theme = { path = "../theme" }
vt = { path = "../vt" }

futures = { version = "0.3", optional = true }
gpui = { git = "https://github.com/zed-industries/zed", rev = "96285fc1", optional = true }
image = { version = "0.25", optional = true }
smallvec = { version = "1", optional = true }

# The example needs a windowing backend; the library itself only needs gpui.
[dev-dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "96285fc1", features = ["font-kit", "wayland", "x11"] }

[[example]]
name = "embed"
required-features = ["ui"]
